--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,8 @@
 {
+  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "projects": {
-    "angular21-starter": {
+    "ng21-stable": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
@@ -9,7 +10,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular21-starter",
+            "outputPath": "dist/ng21-stable",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [],
@@ -19,7 +20,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular21-starter:build"
+            "browserTarget": "ng21-stable:build"
           }
         }
       }
