--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,15 +1,13 @@
 {
+  "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "target": "es2022",
-    "module": "es2022",
-    "moduleResolution": "node",
-    "experimentalDecorators": true,
-    "strict": true,
-    "skipLibCheck": true,
     "outDir": "./out-tsc/app",
     "types": []
   },
   "files": [
     "src/main.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
   ]
 }
