--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng21-stable:build"
+            "buildTarget": "ng21-stable:build"
           }
         }
       }
