--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,7 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "projects": {
-    "ng21-stable": {
+    "ng21-full": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
@@ -10,17 +10,16 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng21-stable",
+            "outputPath": "dist/ng21-full",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": [],
             "tsConfig": "tsconfig.app.json"
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "ng21-stable:build"
+            "buildTarget": "ng21-full:build"
           }
         }
       }
