--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "ng21-stable",
+  "name": "ng21-full",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "start": "ng serve",
     "build": "ng build"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^21.0.2",
-    "@angular/compiler": "^21.0.2",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^21.0.2",
-    "@angular/platform-browser": "^21.0.2",
-    "@angular/platform-browser-dynamic": "^21.0.2",
-    "@angular/router": "^21.0.2",
+    "@angular/core": "^21.0.0",
+    "@angular/common": "^21.0.0",
+    "@angular/platform-browser": "^21.0.0",
+    "@angular/router": "^21.0.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^21.0.1",
-    "@angular/cli": "^21.0.1",
-    "@angular/compiler-cli": "^21.0.2",
-    "@types/mocha": "^10.0.10",
-    "typescript": "5.2.2"
+    "@angular/cli": "^21.0.0",
+    "typescript": "~5.9.0"
   }
 }
