--- a/angular.json
+++ b/angular.json
@@ -2,42 +2,46 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "projects": {
-<<<<<<< Updated upstream
     "ng21-full": {
-=======
-    "ng21-stable": {
->>>>>>> Stashed changes
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
+      "prefix": "app",
+      "schematics": {},
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-<<<<<<< Updated upstream
             "outputPath": "dist/ng21-full",
             "index": "src/index.html",
             "main": "src/main.ts",
-=======
-            "outputPath": "dist/ng21-stable",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": [],
->>>>>>> Stashed changes
-            "tsConfig": "tsconfig.app.json"
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.app.json",
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
+            "scripts": []
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-<<<<<<< Updated upstream
-            "buildTarget": "ng21-full:build"
-=======
-            "browserTarget": "ng21-stable:build"
->>>>>>> Stashed changes
+            "browserTarget": "ng21-full:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "src/test.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.spec.json",
+            "karmaConfig": "karma.conf.js",
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
+            "scripts": []
           }
         }
       }
     }
-  }
+  },
+  "defaultProject": "ng21-full"
 }
