--- a/package.json
+++ b/package.json
@@ -1,46 +1,31 @@
 {
-<<<<<<< Updated upstream
   "name": "ng21-full",
   "version": "0.0.1",
-=======
-  "name": "ng21-stable",
-  "version": "0.0.1",
-  "private": true,
->>>>>>> Stashed changes
   "scripts": {
+    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test"
   },
-<<<<<<< Updated upstream
   "private": true,
   "dependencies": {
-    "@angular/core": "^18.2.14",
+    "@angular/animations": "^21.0.0",
     "@angular/common": "^21.0.0",
+    "@angular/compiler": "^21.0.0",
+    "@angular/core": "^21.0.0",
+    "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
+    "@angular/platform-browser-dynamic": "^21.0.0",
     "@angular/router": "^21.0.0",
-=======
-  "dependencies": {
-    "@angular/animations": "^17.3.0",
-    "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
-    "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
-    "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
->>>>>>> Stashed changes
-    "rxjs": "~7.8.0",
+    "rxjs": "^8.1.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-<<<<<<< Updated upstream
+    "@angular-devkit/build-angular": "^21.0.0",
     "@angular/cli": "^21.0.0",
-    "typescript": "~5.9.0"
-=======
-    "@angular-devkit/build-angular": "^17.3.0",
-    "@angular/cli": "^17.3.0",
-    "@angular/compiler-cli": "^17.3.0",
-    "typescript": "5.2.2"
->>>>>>> Stashed changes
+    "@angular/compiler-cli": "^21.0.0",
+    "@types/node": "^20.0.0",
+    "typescript": "~6.0.0"
   }
 }
